--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <title>Theratio</title>
+    <title>Мережа стоматологічних клінік</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -27,7 +27,7 @@
     <div id="page" class="site">
       <header id="site-header" class="site-header header-transparent">
         <!-- Main Header start -->
-        <div class="header-topbar style-2 d-none d-lg-block d-md-block">
+        <div class="header-topbar style-2 d-none d-lg-block">
           <div class="octf-area-wrap">
             <div class="container">
               <div class="row">
@@ -59,6 +59,7 @@
             </div>
           </div>
         </div>
+
         <div class="octf-main-header is-fixed">
           <div class="octf-area-wrap">
             <div class="container-fluid octf-mainbar-container">
@@ -91,7 +92,7 @@
                           <a href="#">Наші-роботи</a>
                         </li>
                         <li>
-                          <a href="#">Прайс-лист</a>
+                          <a href="price-list.html">Прайс-лист</a>
                         </li>
                         <li class="current-menu-item current-menu-ancestor">
                           <a href="contact.html">Контакти</a>
@@ -180,93 +181,6 @@
         ></a>
         <div class="side-panel-block">
           <div class="side-panel-wrap">
-            <div class="the-logo">
-              <a href="index-html">
-                <img src="images/logo-footer.svg" alt="Theratio" />
-              </a>
-            </div>
-            <div class="ot-heading">
-              <h2 class="main-heading">Our Gallery</h2>
-            </div>
-            <div class="image-gallery">
-              <div
-                id="gallery-1"
-                class="gallery galleryid-102 gallery-columns-3 gallery-size-thumbnail"
-              >
-                <figure class="gallery-item">
-                  <div class="gallery-icon landscape">
-                    <a
-                      data-elementor-open-lightbox="yes"
-                      data-elementor-lightbox-slideshow="8701e24"
-                      data-elementor-lightbox-title="p4-gallery1"
-                      href="images/gallery1.jpg"
-                    >
-                      <img src="images/gallery-small-1.jpg" class="" alt="" />
-                    </a>
-                  </div>
-                </figure>
-                <figure class="gallery-item">
-                  <div class="gallery-icon landscape">
-                    <a
-                      data-elementor-open-lightbox="yes"
-                      data-elementor-lightbox-slideshow="8701e24"
-                      data-elementor-lightbox-title="p4-gallery1"
-                      href="images/gallery2.jpg"
-                    >
-                      <img src="images/gallery-small-2.jpg" class="" alt="" />
-                    </a>
-                  </div>
-                </figure>
-                <figure class="gallery-item">
-                  <div class="gallery-icon landscape">
-                    <a
-                      data-elementor-open-lightbox="yes"
-                      data-elementor-lightbox-slideshow="8701e24"
-                      data-elementor-lightbox-title="p4-gallery1"
-                      href="images/gallery3.jpg"
-                    >
-                      <img src="images/gallery-small-3.jpg" class="" alt="" />
-                    </a>
-                  </div>
-                </figure>
-                <figure class="gallery-item">
-                  <div class="gallery-icon landscape">
-                    <a
-                      data-elementor-open-lightbox="yes"
-                      data-elementor-lightbox-slideshow="8701e24"
-                      data-elementor-lightbox-title="p4-gallery1"
-                      href="images/gallery4.jpg"
-                    >
-                      <img src="images/gallery-small-4.jpg" class="" alt="" />
-                    </a>
-                  </div>
-                </figure>
-                <figure class="gallery-item">
-                  <div class="gallery-icon landscape">
-                    <a
-                      data-elementor-open-lightbox="yes"
-                      data-elementor-lightbox-slideshow="8701e24"
-                      data-elementor-lightbox-title="p4-gallery1"
-                      href="images/gallery5.jpg"
-                    >
-                      <img src="images/gallery-small-5.jpg" class="" alt="" />
-                    </a>
-                  </div>
-                </figure>
-                <figure class="gallery-item">
-                  <div class="gallery-icon landscape">
-                    <a
-                      data-elementor-open-lightbox="yes"
-                      data-elementor-lightbox-slideshow="8701e24"
-                      data-elementor-lightbox-title="p4-gallery1"
-                      href="images/gallery6.jpg"
-                    >
-                      <img src="images/gallery-small-6.jpg" class="" alt="" />
-                    </a>
-                  </div>
-                </figure>
-              </div>
-            </div>
             <div class="ot-heading">
               <h2 class="main-heading">Contact Info</h2>
             </div>
@@ -330,7 +244,7 @@
         >
           <div class="dcell">
             <div class="container">
-              <h1 class="page-title">Contact</h1>
+              <h1 class="page-title">Контакти</h1>
             </div>
           </div>
         </div>
@@ -485,7 +399,7 @@
 
       <div class="map">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5598.372766257792!2d36.232882070080684!3d49.992374617822456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a0f1b04aa383%3A0x95193f4aa08177cb!2z0KLQoNCmIE5JS09MU0tZ!5e0!3m2!1sru!2sua!4v1682001309995!5m2!1sru!2sua"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d707.5195870767756!2d36.26888837712064!3d49.98539136303061!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a09bc59e96a7%3A0xe5e3984df006e4b2!2z0KTQtdGB0LXQvdC60L7QstGB0LrQuNC5INCy0YrQtdC30LQsIDIsINCl0LDRgNGM0LrQvtCyLCDQpdCw0YDRjNC60L7QstGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCA2MTAwMA!5e0!3m2!1sru!2sua!4v1682500894674!5m2!1sru!2sua"
           width="600"
           height="450"
           style="border: 0"
@@ -496,43 +410,10 @@
       </div>
 
       <footer id="site-footer" class="site-footer">
-        <div class="container">
+        <div class="container footer-main">
           <div class="row">
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-4 mb-xl-0">
-              <div class="widget-footer">
-                <img src="images/logo-footer.svg" class="footer-logo" alt="" />
-                <p>
-                  We provides a full range of interior design, architectural
-                  design.
-                </p>
-                <div class="footer-social list-social">
-                  <ul>
-                    <li>
-                      <a href="http://facebook.com" target="_self"
-                        ><i class="fab fa-facebook-f"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="http://twitter.com" target="_self"
-                        ><i class="fab fa-twitter"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="http://linkedin.com" target="_self"
-                        ><i class="fab fa-linkedin-in"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="http://instagram" target="_self"
-                        ><i class="fab fa-instagram"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-4 mb-xl-0">
-              <div class="widget-footer">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mb-6 mb-xl-0">
+              <div class="widget-footer widget-footer-wrapper">
                 <h6>Contacts</h6>
                 <ul class="footer-list">
                   <li class="footer-list-item">
@@ -557,73 +438,89 @@
                     ></span>
                     <span class="list-item-text">+1 800 456 789 123</span>
                   </li>
+                  <li class="footer-list-item">
+                    <span class="list-item-icon"
+                      ><i class="ot-flaticon-phone-call"></i
+                    ></span>
+                    <span class="list-item-text">+1 500 123 321 345</span>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <span class="panel-list-icon"
+                      ><i class="ot-flaticon-day">
+                        <a
+                          href="https://www.flaticon.com/free-icons/time-and-date"
+                          title="time-and-date icons"
+                          >Time-and-date icons created by Ifanicon - Flaticon</a
+                        >
+                      </i></span
+                    >
+                    <span class="panel-list-text">Пн-Пт 10.00 - 20.00</span>
+                  </li>
                 </ul>
               </div>
             </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-4 mb-md-0">
-              <div class="widget-footer widget-contact">
-                <h6>Latest Projects</h6>
-                <ul>
-                  <li><a href="#">Stylish Family Appartment</a></li>
-                  <li><a href="#">Modern Villa in Belgium</a></li>
-                  <li><a href="#">Private House in Spain</a></li>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mb-6 mb-xl-0">
+              <div class="widget-footer widget-footer-wrapper">
+                <h6>Contacts</h6>
+                <ul class="footer-list">
+                  <li class="footer-list-item">
+                    <span class="list-item-icon"
+                      ><i class="ot-flaticon-place"></i
+                    ></span>
+                    <span class="list-item-text"
+                      >411 University St, Seattle, USA</span
+                    >
+                  </li>
+                  <li class="footer-list-item">
+                    <span class="list-item-icon"
+                      ><i class="ot-flaticon-mail"></i
+                    ></span>
+                    <span class="list-item-text"
+                      >theratio_interior@mail.com</span
+                    >
+                  </li>
+                  <li class="footer-list-item">
+                    <span class="list-item-icon"
+                      ><i class="ot-flaticon-phone-call"></i
+                    ></span>
+                    <span class="list-item-text">+1 800 456 789 123</span>
+                  </li>
+                  <li class="footer-list-item">
+                    <span class="list-item-icon"
+                      ><i class="ot-flaticon-phone-call"></i
+                    ></span>
+                    <span class="list-item-text">+1 500 123 321 345</span>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <span class="panel-list-icon"
+                      ><i class="ot-flaticon-day">
+                        <a
+                          href="https://www.flaticon.com/free-icons/time-and-date"
+                          title="time-and-date icons"
+                          >Time-and-date icons created by Ifanicon - Flaticon</a
+                        >
+                      </i></span
+                    >
+                    <span class="panel-list-text">Пн-Пт 10.00 - 20.00</span>
+                  </li>
                 </ul>
               </div>
             </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12">
-              <div class="widget-footer footer-widget-subcribe">
-                <h6>Subscribe</h6>
-                <form class="mc4wp-form" method="post">
-                  <div class="mc4wp-form-fields">
-                    <div class="subscribe-inner-form">
-                      <input
-                        type="email"
-                        name="EMAIL"
-                        placeholder="YOUR EMAIL"
-                        required=""
-                      />
-                      <button type="submit" class="subscribe-btn-icon">
-                        <i class="ot-flaticon-send"></i>
-                      </button>
-                    </div>
-                  </div>
-                </form>
-                <p>Follow our newsletter to stay updated about agency.</p>
-              </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <div class="container">
+            <div class="row d-flex justify-content-center">
+              <p>
+                Copyright © 2023
+                <b>Kharkiv dental center</b>. Всі права захищені.
+              </p>
             </div>
           </div>
         </div>
       </footer>
-      <!-- #site-footer -->
-      <div class="footer-bottom">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-7 col-md-12 mb-4 mb-lg-0">
-              <p>
-                Copyright © 2020 Theratio by
-                <a class="text-light" href="#">ThemeModern</a>. All Rights
-                Reserved.
-              </p>
-            </div>
-            <div class="col-lg-5 col-md-12 align-self-center">
-              <ul class="icon-list-items inline-items justify-content-lg-end">
-                <li class="icon-list-item inline-item">
-                  <a href="#"
-                    ><span class="icon-list-text">Terms of use</span></a
-                  >
-                </li>
-                <li class="icon-list-item inline-item">
-                  <a href="#"
-                    ><span class="icon-list-text"
-                      >Privacy Environmental Policy</span
-                    ></a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
     <!-- #page -->
     <a id="back-to-top" href="#" class="show"
