--- a/index.html
+++ b/index.html
@@ -39,26 +39,39 @@
     <div id="page" class="site">
       <header id="site-header" class="site-header header-transparent">
         <!-- Main Header start -->
-        <div class="header-topbar style-2 d-none d-lg-block d-md-block">
+        <div class="header-topbar style-2 d-none d-lg-block">
           <div class="octf-area-wrap">
             <div class="container">
               <div class="row">
                 <div class="col-md-12">
-                  <ul class="topbar-info topbar-info-white d-flex mb-0 justify-content-end clearfix">
+                  <ul
+                    class="topbar-info topbar-info-white d-flex mb-0 justify-content-center clearfix"
+                  >
                     <li>
                       <a href="tel:+1 500 123 321 345">
-                      <span class="list-item-icon"><i class="ot-flaticon-phone-call"></i></span>
-                      <span class="list-item-text">+1 500 123 321 345</span>
+                        <span class="list-item-icon"
+                          ><i class="ot-flaticon-phone-call"></i
+                        ></span>
+                        <span class="list-item-text">+1 500 123 321 345</span>
                       </a>
                     </li>
-                    <li><i class="ot-flaticon-place"></i>411 University St, Seattle, USA</li>
-                    <li><a href="mailto:theratio_interior@mail.com"><i class="ot-flaticon-mail"></i>theratio_interior@mail.com</a></li>
+                    <li>
+                      <i class="ot-flaticon-place"></i>411 University St,
+                      Seattle, USA
+                    </li>
+                    <li>
+                      <a href="mailto:theratio_interior@mail.com"
+                        ><i class="ot-flaticon-mail"></i
+                        >theratio_interior@mail.com</a
+                      >
+                    </li>
                   </ul>
                 </div>
               </div>
             </div>
           </div>
         </div>
+
         <div class="octf-main-header is-fixed">
           <div class="octf-area-wrap">
             <div class="container-fluid octf-mainbar-container">
@@ -91,7 +104,7 @@
                           <a href="#">Наші-роботи</a>
                         </li>
                         <li>
-                          <a href="#">Прайс-лист</a>
+                          <a href="price-list.html">Прайс-лист</a>
                         </li>
                         <li><a href="contact.html">Контакти</a></li>
                       </ul>
@@ -158,7 +171,7 @@
                           </li>
                           <li><a href="#">Наші роботи</a></li>
                           <li>
-                            <a href="#">Прайс лист</a>
+                            <a href="price-list.html">Прайс лист</a>
                           </li>
                           <li><a href="contact.html">Контакти</a></li>
                         </ul>
@@ -1041,26 +1054,8 @@
       </div>
 
       <footer id="site-footer" class="site-footer">
-        <div class="container">
+        <div class="container footer-main">
           <div class="row">
-<!--            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mb-6 mb-xl-0">-->
-<!--              <div class="widget-footer widget-footer-wrapper">-->
-<!--                <img src="images/logo-footer.svg" class="footer-logo" alt="" />-->
-<!--                <p>-->
-<!--                  We provides a full range of interior design, architectural-->
-<!--                  design.-->
-<!--                </p>-->
-<!--                <div class="footer-social list-social">-->
-<!--                  <ul>-->
-<!--                    <li>-->
-<!--                      <a href="http://instagram" target="_self"-->
-<!--                        ><i class="fab fa-instagram"></i-->
-<!--                      ></a>-->
-<!--                    </li>-->
-<!--                  </ul>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mb-6 mb-xl-0">
               <div class="widget-footer widget-footer-wrapper">
                 <h6>Contacts</h6>
@@ -1089,17 +1084,69 @@
                   </li>
                   <li class="footer-list-item">
                     <span class="list-item-icon"
-                    ><i class="ot-flaticon-phone-call"></i
+                      ><i class="ot-flaticon-phone-call"></i
                     ></span>
                     <span class="list-item-text">+1 500 123 321 345</span>
                   </li>
 
                   <li class="panel-list-item">
-                  <span class="panel-list-icon"
-                  ><i class="ot-flaticon-day">
-                    <a href="https://www.flaticon.com/free-icons/time-and-date" title="time-and-date icons">Time-and-date icons created by Ifanicon - Flaticon</a>
-                  </i
-                  ></span>
+                    <span class="panel-list-icon"
+                      ><i class="ot-flaticon-day">
+                        <a
+                          href="https://www.flaticon.com/free-icons/time-and-date"
+                          title="time-and-date icons"
+                          >Time-and-date icons created by Ifanicon - Flaticon</a
+                        >
+                      </i></span
+                    >
+                    <span class="panel-list-text">Пн-Пт 10.00 - 20.00</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mb-6 mb-xl-0">
+              <div class="widget-footer widget-footer-wrapper">
+                <h6>Contacts</h6>
+                <ul class="footer-list">
+                  <li class="footer-list-item">
+                    <span class="list-item-icon"
+                      ><i class="ot-flaticon-place"></i
+                    ></span>
+                    <span class="list-item-text"
+                      >411 University St, Seattle, USA</span
+                    >
+                  </li>
+                  <li class="footer-list-item">
+                    <span class="list-item-icon"
+                      ><i class="ot-flaticon-mail"></i
+                    ></span>
+                    <span class="list-item-text"
+                      >theratio_interior@mail.com</span
+                    >
+                  </li>
+                  <li class="footer-list-item">
+                    <span class="list-item-icon"
+                      ><i class="ot-flaticon-phone-call"></i
+                    ></span>
+                    <span class="list-item-text">+1 800 456 789 123</span>
+                  </li>
+                  <li class="footer-list-item">
+                    <span class="list-item-icon"
+                      ><i class="ot-flaticon-phone-call"></i
+                    ></span>
+                    <span class="list-item-text">+1 500 123 321 345</span>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <span class="panel-list-icon"
+                      ><i class="ot-flaticon-day">
+                        <a
+                          href="https://www.flaticon.com/free-icons/time-and-date"
+                          title="time-and-date icons"
+                          >Time-and-date icons created by Ifanicon - Flaticon</a
+                        >
+                      </i></span
+                    >
                     <span class="panel-list-text">Пн-Пт 10.00 - 20.00</span>
                   </li>
                 </ul>
@@ -1107,18 +1154,17 @@
             </div>
           </div>
         </div>
-      </footer>
-      <!-- #site-footer -->
-      <div class="footer-bottom">
-        <div class="container">
-          <div class="row d-flex justify-content-center">
-            <p>
-              Copyright © 2023
-              <b>Kharkiv dental center</b>. Всі права захищені.
-            </p>
+        <div class="footer-bottom">
+          <div class="container">
+            <div class="row d-flex justify-content-center">
+              <p>
+                Copyright © 2023
+                <b>Kharkiv dental center</b>. Всі права захищені.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
+      </footer>
     </div>
     <!-- #page -->
     <a id="back-to-top" href="#" class="show"
