--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
                           <a href="index.html">Головна</a>
                         </li>
                         <li>
-                          <a href="#">Про центр</a>
+                          <a href="about-us.html">Про центр</a>
                         </li>
                         <li>
-                          <a href="#">Фахівці</a>
+                          <a href="our-team.html">Фахівці</a>
                         </li>
                         <li>
-                          <a href="#">Наші-роботи</a>
+                          <a href="our-works.html">Наші-роботи</a>
                         </li>
                         <li>
                           <a href="price-list.html">Прайс-лист</a>
@@ -164,12 +164,12 @@
                             <a href="index.html">Головна</a>
                           </li>
                           <li class="current-menu-item">
-                            <a href="#">Про центр</a>
+                            <a href="about-us.html">Про центр</a>
                           </li>
                           <li>
-                            <a href="#l">Фахівці</a>
+                            <a href="our-team.html">Фахівці</a>
                           </li>
-                          <li><a href="#">Наші роботи</a></li>
+                          <li><a href="our-works.html">Наші роботи</a></li>
                           <li>
                             <a href="price-list.html">Прайс лист</a>
                           </li>
